--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,7 @@ python_classes = Test*
 python_functions = test_*
 markers =
     courses: Маркировка для тестов, связанных с курсами.
+    dashboard: Маркировка для тестов, связанных с рабочей панелью.
     regression: Маркировка для регрессионных тестов.
     registration: Маркировка для тестов, связанных с регистрацией пользователей.
     authorization: Маркировка для тестов, связанных с авторизацией пользователей.
